; ModuleID = '/home/carl/AnghaBench/linux/drivers/iio/dac/extr_mcp4922.c_mcp4922_read_raw.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/iio/dac/extr_mcp4922.c_mcp4922_read_raw.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.iio_dev = type { i32 }
%struct.iio_chan_spec = type { i64, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }
%struct.mcp4922_state = type { i32*, i32 }

@IIO_VAL_INT = common dso_local global i32 0, align 4
@IIO_VAL_FRACTIONAL_LOG2 = common dso_local global i32 0, align 4
@EINVAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.iio_dev*, %struct.iio_chan_spec*, i32*, i32*, i64)* @mcp4922_read_raw to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mcp4922_read_raw(%struct.iio_dev* %0, %struct.iio_chan_spec* %1, i32* %2, i32* %3, i64 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca %struct.iio_dev*, align 8
  %8 = alloca %struct.iio_chan_spec*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i64, align 8
  %12 = alloca %struct.mcp4922_state*, align 8
  store %struct.iio_dev* %0, %struct.iio_dev** %7, align 8
  store %struct.iio_chan_spec* %1, %struct.iio_chan_spec** %8, align 8
  store i32* %2, i32** %9, align 8
  store i32* %3, i32** %10, align 8
  store i64 %4, i64* %11, align 8
  %13 = load %struct.iio_dev*, %struct.iio_dev** %7, align 8
  %14 = call %struct.mcp4922_state* @iio_priv(%struct.iio_dev* %13)
  store %struct.mcp4922_state* %14, %struct.mcp4922_state** %12, align 8
  %15 = load i64, i64* %11, align 8
  switch i64 %15, label %38 [
    i64 129, label %16
    i64 128, label %27
  ]

16:                                               ; preds = %5
  %17 = load %struct.mcp4922_state*, %struct.mcp4922_state** %12, align 8
  %18 = getelementptr inbounds %struct.mcp4922_state, %struct.mcp4922_state* %17, i32 0, i32 0
  %19 = load i32*, i32** %18, align 8
  %20 = load %struct.iio_chan_spec*, %struct.iio_chan_spec** %8, align 8
  %21 = getelementptr inbounds %struct.iio_chan_spec, %struct.iio_chan_spec* %20, i32 0, i32 0
  %22 = load i64, i64* %21, align 8
  %23 = getelementptr inbounds i32, i32* %19, i64 %22
  %24 = load i32, i32* %23, align 4
  %25 = load i32*, i32** %9, align 8
  store i32 %24, i32* %25, align 4
  %26 = load i32, i32* @IIO_VAL_INT, align 4
  store i32 %26, i32* %6, align 4
  br label %41

27:                                               ; preds = %5
  %28 = load %struct.mcp4922_state*, %struct.mcp4922_state** %12, align 8
  %29 = getelementptr inbounds %struct.mcp4922_state, %struct.mcp4922_state* %28, i32 0, i32 1
  %30 = load i32, i32* %29, align 8
  %31 = load i32*, i32** %9, align 8
  store i32 %30, i32* %31, align 4
  %32 = load %struct.iio_chan_spec*, %struct.iio_chan_spec** %8, align 8
  %33 = getelementptr inbounds %struct.iio_chan_spec, %struct.iio_chan_spec* %32, i32 0, i32 1
  %34 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %33, i32 0, i32 0
  %35 = load i32, i32* %34, align 8
  %36 = load i32*, i32** %10, align 8
  store i32 %35, i32* %36, align 4
  %37 = load i32, i32* @IIO_VAL_FRACTIONAL_LOG2, align 4
  store i32 %37, i32* %6, align 4
  br label %41

38:                                               ; preds = %5
  %39 = load i32, i32* @EINVAL, align 4
  %40 = sub nsw i32 0, %39
  store i32 %40, i32* %6, align 4
  br label %41

41:                                               ; preds = %38, %27, %16
  %42 = load i32, i32* %6, align 4
  ret i32 %42
}

declare dso_local %struct.mcp4922_state* @iio_priv(%struct.iio_dev*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
